<resources>
    <string name="permission_read_phone_state_rationale">برای ادامه و ثبت نام نیاز به این دسترسی وجود داره</string>
    <string name="permission_ok">باشه</string>
    <string name="course_to_course">درس‌به‌درس</string>
    <string name="caption_referral_code_explanation">اگه دوستت دوئل رو بهت معرفی کرده کدش رو بزن تا هم تو آزمون رایگان دریافت کنی هم دوستت\nمثلا fb60d</string>
    <string name="caption_referral_code">کد معرف</string>
    <string name="caption_invited_users_cnt">تا الان %d نفر از طریق تو اومدن به دوئل کنکور</string>
    <string name="caption_free_quiz_cnt">می‌تونی توی %d آزمون دیگه شرکت کنی</string>
    <string name="caption_free_quiz_cnt_infinity">می‌تونی تو هر چند تا آزمون دیگه که خواستی شرکت کنی :-)</string>
    <string name="caption_invite_friends_info">معرفی هر ۲ نفر\n=\nیک آزمون رایگان\n+\n۴۰۰ الماس</string>
    <string name="caption_subscribe_description"> ۸ آزمون جمع‌بندی برای قلم‌چی\n۵ آزمون جمع‌بندی برای سنجش\n۱۰۰ آزمون جمع‌بندی روزانه تا کنکور\nروزانه ۴۰ قلب برای دوئل\n۷۰۰۰ الماس</string>
    <string name="quiz_description_ghalamchi">جمع‌بندی عمومی قلم‌چی ۲۱ اسفند\nجمع‌بندی عمومی قلم‌چی ۷ فروردین\nجمع‌بندی عمومی قلم‌چی ۲۰ فروردین\nجمع‌بندی عمومی قلم‌چی ۳ اردیبهشت\nجمع‌بندی عمومی قلم‌چی ۱۷ اردیبهشت\nجمع‌بندی عمومی قلم‌چی ۳۱ اردیبهشت\nجمع‌بندی عمومی قلم‌چی ۲۱ خرداد\nجمع‌بندی عمومی قلم‌چی ۴ تیر\nجمع‌بندی عمومی قلم‌چی ۱۸ تیر</string>
    <string name="quiz_description_sanjesh">جمع‌بندی عمومی سنجش ۲۰ فروردین\nجمع‌بندی عمومی سنجش ۱۰ اردیبهشت\nجمع‌بندی عمومی سنجش ۲۴ اردیبهشت\nجمع‌بندی عمومی سنجش ۷ خرداد\nجمع‌بندی عمومی سنجش ۱۱ تیر</string>
    <string name="quiz_description_daily">آزمون‌های جمع بندی دوئل به صورت روزانه برگزار می‌شود و شامل همه‌ی درس‌هاست.\nبا شرکت در آزمون‌های روزانه می‌توانید درس‌های عمومی و زیست شناسی را تا روز کنکور  دوره کنید.\nرتبه‌ی شما بعد از هر آزمون روزانه مشخص می‌شود تا بتوانید روند پیشرفت‌ خود را بررسی کنید.</string>
    <string name="quiz_description_heart">جای ۵ قلب در روز ۴۰ قلب دریافت می‌کنید</string>
    <string name="quiz_description_diamond">۷۰۰۰ الماس هم دریافت می‌کنید.</string>
    <string name="subscription_price">هزینه: %d تومان</string>
    <string name="caption_diamond_cnt">%d تا الماس داری\n\n</string>
    <string name="toast_try_again">لطفا اپلیکیشن رو کامل ببند و دوباره امتحان کن</string>
    <string name="caption_retake_step">برای اینکه این مرحله رو دوباره بگذرونی و ستاره‌هات رو افزایش بدی باید ۲۹۰ الماس بپردازی</string>
    <string name="quiz_running">باز</string>
    <string name="quiz_due">تمام شده</string>
    <string name="quiz_future">آینده</string>
    <string name="step_duel_stars_explanation">باید حداقل یک ستاره بگیری تا بتونی روی سوالات این درس دوئل کنی\n\nبالای ۸۰ درصد = سه ستاره\n\nبالای ۶۰ درصد = دو ستاره\n\nبالای ۴۰ درصد = یک ستاره</string>
    <string name="confirm_start_quiz">از زمانی که آزمون رو شروع کنی فقط %s دقیقه فرصت داری جواب هات رو ارسال کنی. \n\n وسط آزمون می تونی اپ رو ببندی ولی هر سوال رو فقط یک باری می تونی جواب بدی.</string>
    <string name="caption_number_of_participants">تعداد شرکت کنندگان: </string>
    <string name="caption_you_duel_first">اول تو دوئل می‌کنی\nبعدش دوستت دوئل می‌کنه\nآخرش نتیجه مشخص می‌شه</string>
    <string name="caption_accept_duel_offline">دوستت تو رو به دوئل دعوت کرده و سوالات رو جواب داده\nالان نوبت توء که سوالات رو جواب بدی</string>
    <string name="button_accept">قبول</string>
    <string name="button_deny">بیخیال</string>
    <string name="button_use_free_exam">استفاده از یکی از آزمون‌های رایگانم</string>
    <string name="caption_no_pending_opponent_turn">کسی رو به دوئل نوبتی دعوت نکردی</string>
    <string name="caption_no_pending_my_turn">کسی تو رو به دوئل نوبتی دعوت نکرده</string>
    <string name="caption_no_pending_done">تا حالا هیچ دوئل نوبتی‌ای رو به پایان نرسوندی</string>
    <string name="caption_number_of_pending_duels">دوستات %d بار تو رو به دوئل نوبتی دعوت کردن و الان منتظر تو هستن که جواب دوئلشون رو بدی\nلیست دوئل‌های نوبتی رو نگاه کن</string>
    <string name="direct_duel">مستقیم</string>
    <string name="turn_base_duel">نوبتی</string>
    <string name="caption_turn_base_duel">دوئل نوبتی</string>
    <string name="which_duel_type">دوئل از کدوم نوع؟</string>
    <string name="app_name">دوئل کنکور</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="splash_circle">&#9679;</string>
    <string name="win_caption">برد</string>
    <string name="draw_caption">مساوی</string>
    <string name="lose_caption">باخت</string>
    <string name="course_caption">درس</string>
    <string name="your_score">امتیاز شما:</string>
    <string name="no_mutual_statistics_message">تا حالا با هم بازی نکردید!</string>
    <string name="report_problem">ایراد؟</string>
    <string name="report_problem_confirm">این سوال ایراد علمی یا املایی دارد؟</string>
    <string name="report_problem_thanks">ممنون، به زودی ایراد رو برطرف می کنیم.</string>
    <string name="please_wait_message">لطفا کمی صبر کنید...</string>
    <string name="caption_introduce_friend_after_quiz">جواب آزمون ثبت شد\nحالا می تونی از صفحه ی آزمون نتایج رو ببینی\n\nبا معرفی دوئل به دوستات از طریق تلگرام یا ایمیل خودت رو تو یه جامعه آماری بزرگتر بسنج</string>
    <string name="submit_quiz_answer_not_ok">جواب ثبت نشد :-( \n میشه چند دقیقه دیگه امتحان کنی؟</string>
    <string name="caption_quiz_cost">هزینه ی آزمون: </string>
    <string name="caption_quiz_discount">تخفیف: </string>
    <string name="caption_quiz_payable_price">هزینه ی قابل پرداخت: </string>
    <string name="caption_quiz_bought_successfully">آزمون خریداری شد، می تونی تو زمان مشخص شده توی آزمون شرکت کنی.</string>
    <string name="caption_toman">تومان</string>
    <string name="caption_discount">درصد</string>
    <string-array name="province_array">
        <item>انتخاب استان</item>
        <item>خارج از ایران</item>
        <item>آذربایجان شرقی</item>
        <item>آذربایجان غربی</item>
        <item>اردبیل</item>
        <item>اصفهان</item>
        <item>البرز</item>
        <item>ایلام</item>
        <item>بوشهر</item>
        <item>تهران</item>
        <item>چهارمحال و بختیاری</item>
        <item>خراسان جنوبی</item>
        <item>خراسان رضوی</item>
        <item>خراسان شمالی</item>
        <item>خوزستان</item>
        <item>زنجان</item>
        <item>سمنان</item>
        <item>سیستان و بلوچستان</item>
        <item>فارس</item>
        <item>قزوین</item>
        <item>قم</item>
        <item>کردستان</item>
        <item>کرمان</item>
        <item>کرمانشاه</item>
        <item>کهگیلویه و بویراحمد</item>
        <item>گلستان</item>
        <item>گیلان</item>
        <item>لرستان</item>
        <item>مازندران</item>
        <item>مرکزی</item>
        <item>هرمزگان</item>
        <item>همدان</item>
        <item>یزد</item>
    </string-array>
    <string-array name="chapters">
            <item >انتخاب درس</item>
            <item >درس/فصل اول</item>
            <item >درس/فصل دوم</item>
            <item >درس/فصل سوم</item>
            <item >درس/فصل چهارم</item>
            <item >درس/فصل پنجم</item>
            <item >درس/فصل ششم</item>
            <item >درس/فصل هفتم</item>
            <item >درس/فصل هشتم</item>
            <item >درس/فصل نهم</item>
            <item >درس/فصل دهم</item>
            <item >درس/فصل یازدهم</item>
            <item >درس/فصل دوازدهم</item>
            <item >درس/فصل سیزدهم</item>
            <item >درس/فصل چهاردهم</item>
            <item >درس/فصل پانزدهم</item>
            <item >درس/فصل شانزدهم</item>
            <item >درس/فصل هفدهم</item>
            <item >درس/فصل هجدهم</item>
            <item >درس/فصل نوزدهم</item>
            <item >درس/فصل بیستم</item>
            <item >درس/فصل بیست و یکم</item>
            <item >درس/فصل بیست و دوم</item>
            <item >درس/فصل بیست و سوم</item>
            <item >درس/فصل بیست و چهارم</item>
            <item >درس/فصل بیست و پنجم</item>
            <item >درس/فصل بیست و ششم</item>
            <item >درس/فصل بیست و هفتم</item>
            <item >درس/فصل بیست و هشتم</item>
            <item >درس/فصل بیست و نهم</item>
            <item >درس/فصل سی ام</item>
    </string-array>
    <string-array name="courses">
            <item >انتخاب کتاب</item>
            <item >ادبیات ۲</item>
            <item >ادبیات ۳</item>
            <item >ادبیات پیش دانشگاهی</item>
            <item >زبان فارسی ۳</item>

            <item >عربی ۱</item>
            <item >عربی ۲</item>
            <item >عربی ۳</item>

            <item >دین و زندگی ۲</item>
            <item >دین و زندگی ۳</item>
            <item >دین و زندگی پیش دانشگاهی</item>

            <item >زبان ۳</item>
            <item >زبان پیش دانشگاهی</item>

            <item >شیمی ۲</item>
            <item >شیمی ۳</item>
            <item >شیمی پیش دانشگاهی</item>

            <item >زیست ۲</item>
            <item >زیست ۳</item>
            <item >زیست پیش دانشگاهی</item>
    </string-array>
    <string-array name="majors">
        <item>انتخاب رشته</item>
        <item>ریاضی</item>
        <item>تجربی</item>
        <item>انسانی</item>
    </string-array>
    <string-array name="avatars">
        <item>@drawable/av1</item>
        <item>@drawable/av2</item>
        <item>@drawable/av3</item>
        <item>@drawable/av4</item>
        <item>@drawable/av5</item>
        <item>@drawable/av6</item>
        <item>@drawable/av7</item>
        <item>@drawable/av8</item>
        <item>@drawable/av9</item>
        <item>@drawable/av10</item>
        <item>@drawable/av11</item>
        <item>@drawable/av12</item>
        <item>@drawable/av13</item>
        <item>@drawable/av14</item>
        <item>@drawable/av15</item>
        <item>@drawable/av16</item>
        <item>@drawable/av17</item>
        <item>@drawable/av18</item>
        <item>@drawable/av19</item>
        <item>@drawable/av20</item>
        <item>@drawable/av21</item>
        <item>@drawable/av22</item>
        <item>@drawable/av23</item>
        <item>@drawable/av24</item>
    </string-array>
    <string-array name="drawer_titles">
        <item>خرید الماس</item>
        <item>رده بندی ها</item>
        <item>تنظیمات</item>
    </string-array>
    <string-array name="drawer_icons">
        <item>H</item>
        <item>I</item>
        <item>E</item>
    </string-array>
    <string-array name="splash_colors_array">
        <item>#F0D64E</item>
        <item>#D7B740</item>
    </string-array>
    <string-array name="categories_values">
        <item>ادبیات</item>
        <item>عربی</item>
        <item>دین و زندگی</item>
        <item>زبان</item>
        <item>شیمی</item>
        <item>زیست</item>
    </string-array>
    <string-array name="step_values">
        <item>زبان ۳، درس ۱</item>
        <item>زبان ۳، درس ۲</item>
        <item>زبان ۳، درس ۳</item>
        <item>زبان ۳، درس ۴</item>
        <item>زبان ۳، درس ۵</item>
        <item>زبان ۳، درس ۶</item>
        <item>زبان پیش، درس ۱</item>
        <item>زبان پیش، درس ۲</item>
        <item>زبان پیش، درس ۳</item>
        <item>زبان پیش، درس ۴</item>
        <item>زبان پیش، درس ۵</item>
        <item>زبان پیش، درس ۶</item>
        <item>زبان پیش، درس ۷</item>
        <item>زبان پیش، درس ۸</item>
    </string-array>
    <string name="caption_enter_phone_number">شماره تلفن خود را برای تایید وارد نمایید</string>
    <string name="hint_phone">شماره تلفن</string>
    <string name="button_send">ارسال</string>
    <string name="button_adding_friend">افزودن به دوستان</string>
    <string name="button_block">بلاک</string>
    <string name="button_offline_duel">دوئل نوبتی</string>
</resources>