<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/avatar_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/button_close"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="left"
            android:background="@drawable/close_button" />

        <com.mehdiii.duelgame.views.custom.CustomTextView
            android:id="@+id/caption_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="4dp"
            android:padding="@dimen/avatar_padding"
            android:text="@string/caption_enter_phone_number"
            android:textSize="@dimen/fontsize.normal" />

    </LinearLayout>

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        android:gravity="center"
        android:hint="@string/hint_phone"
        android:inputType="phone"
        android:padding="@dimen/avatar_padding" />

    <com.mehdiii.duelgame.views.custom.CustomButton
        android:id="@+id/button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/avatar_padding"
        android:background="@drawable/duel_flat_button"
        android:padding="@dimen/avatar_padding"
        android:text="@string/button_send"
        android:textColor="@color/white" />

</LinearLayout>