<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/avatar_padding">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/avatar_padding" />

    <com.mehdiii.duelgame.views.custom.CustomTextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ellipsize="end"
        android:maxLines="1"
        android:padding="@dimen/avatar_padding" />

    <com.mehdiii.duelgame.views.custom.CustomButton
        android:id="@+id/button_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/avatar_padding"
        android:background="@drawable/duel_flat_button"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/button_block"
        android:textColor="@color/white" />

    <com.mehdiii.duelgame.views.custom.CustomButton
        android:id="@+id/button_add_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/avatar_padding"
        android:background="@drawable/duel_flat_button"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/button_adding_friend"
        android:textColor="@color/white" />

    <com.mehdiii.duelgame.views.custom.CustomButton
        android:id="@+id/button_duel_offline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/avatar_padding"
        android:background="@drawable/duel_flat_button"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/button_offline_duel"
        android:textColor="@color/white" />

</LinearLayout>