<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_1"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/pagination_buttons_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/purple_dark"
        android:orientation="horizontal">

        <Button
            android:id="@+id/previous_ten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="X" />

        <com.mehdiii.duelgame.views.custom.CustomTextView
            android:id="@+id/from_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="1 - 10"
            android:textColor="@color/white"
            android:textSize="@dimen/fontsize.normal" />

        <Button
            android:id="@+id/next_ten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="W" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_dark"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="10dp">

        <com.mehdiii.duelgame.views.custom.CustomTextView
            android:id="@id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="آزمون های جمع بندی"
            android:textColor="@color/white"
            android:textSize="@dimen/fontsize.large" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_toLeftOf="@id/title"
            android:orientation="horizontal">

            <com.mehdiii.duelgame.views.custom.CustomButton
                android:id="@+id/subscribe_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/subscribe_button"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:padding="8dp"
                android:text="عضویت"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/quiz_info_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:background="@color/purple_dark"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="4dp">

        <ImageButton
            android:id="@+id/info_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:background="@drawable/info_white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.mehdiii.duelgame.views.custom.CustomTextView
                    android:id="@+id/invited_users_cnt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/caption_invited_users_cnt"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fontsize.small" />
            </LinearLayout>

            <com.mehdiii.duelgame.views.custom.CustomTextView
                android:id="@+id/free_quiz_cnt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/caption_free_quiz_cnt"
                android:textColor="@color/white"
                android:textSize="@dimen/fontsize.small" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/quiz_info_holder"
        android:orientation="horizontal">

        <com.mehdiii.duelgame.views.custom.CustomTextView
            android:id="@+id/menu_due"
            style="@style/quiz_activity_menu_buttons"
            android:contentDescription="0"
            android:text="@string/quiz_due" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/blue_dark" />

        <com.mehdiii.duelgame.views.custom.CustomTextView
            android:id="@+id/menu_running"
            style="@style/quiz_activity_menu_buttons"
            android:contentDescription="1"
            android:text="@string/quiz_running" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/blue_dark" />

        <com.mehdiii.duelgame.views.custom.CustomTextView
            android:id="@+id/menu_future"
            style="@style/quiz_activity_menu_buttons"
            android:contentDescription="2"
            android:text="@string/quiz_future" />

    </LinearLayout>

    <ListView
        android:id="@+id/quizzes_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/pagination_buttons_holder"
        android:layout_below="@id/menu_holder"
        android:scrollbars="none" />

    <FrameLayout
        android:id="@+id/fragment_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>